--- a/seniorer/site/css/seniorer.css
+++ b/seniorer/site/css/seniorer.css
@@ -4,6 +4,7 @@
     grid-template-columns: repeat(8, 1fr);
     width: 1000px;
     height: 600px;
+    margin: auto;
 }
 
 @media only screen and (max-device-width: 667px) {
