--- a/seniorer/site/css/seniorer.css
+++ b/seniorer/site/css/seniorer.css
@@ -9,12 +9,19 @@
 }
 
 header {
-    grid-column: span 8;
-    grid-row: span 2;
+    grid-column: 1/9;
+    grid-row: 1/4;
     background-color: #00e4e4;
 }
 
-
+.train {
+    grid-column: 4/6;
+    grid-row: 2/3;
+    background-color: white;
+    border: 2px solid #090d0d;
+    font-size: 32px;
+    border-radius: 8px;
+}
 
 @media only screen and (max-device-width: 375px) {
 
@@ -30,6 +37,14 @@ header {
     .container {
         height: 375px;
         width: 667px;
+    }
+}
+
+@media only screen and (min-device-width: 700px) {
+
+    .container {
+        width: 1000px;
+        height: 600px;
     }
 }
 
