--- a/seniorer/site/css/seniorer.css
+++ b/seniorer/site/css/seniorer.css
@@ -35,6 +35,46 @@ header {
     transition-duration: 0.4s;
 }
 
+.dropbtn {
+    background-color: white;
+    border: 2px solid #090d0d;
+    font-size: 32px;
+    border-radius: 8px;
+    transition-duration: 0.4s;
+}
+
+.dropdown {
+    grid-column: 7/8;
+    grid-row: 2/3;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-size: 24px;
+}
+
+.dropdown-content a:hover {background-color: #ddd}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: rgb(182, 178, 178);
+}
+
 @media only screen and (max-device-width: 375px) {
 
     .container {
